@@ -117,7 +117,7 @@ public class Crawl {
     int i;
     for (i = 0; i < depth; i++) {             // generate new segment
       Path segment = generator.generate(crawlDb, segments, -1, topN, System
-          .currentTimeMillis(), false, false);
+          .currentTimeMillis());
       if (segment == null) {
         LOG.info("Stopping at depth=" + i + " - no more URLs to fetch.");
         break;
