@@ -220,6 +220,9 @@ Unreleased changes (1.0-dev)
 
 79. NUTCH-613 - Empty summaries and cached pages (kubes via ab)
 
+80. NUTCH-612 - URL filtering was disabled in Generator when invoked
+    from Crawl (Susam Pal via ab)
+
 
 Release 0.9 - 2007-04-02
 
